unpackaged/main/default/objects/Integrations__c/Integrations__c.object-meta.xml
<CustomObject>
    <description>Object is used to track integrations customers have signed up for from the diffrent product environments. Object is populated by the diffrent production environments.</description>
    <label>Integrations</label>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Integrations</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>