unpackaged/main/default/objects/Integrations__c/fields/Available_Integration__c.field-meta.xml
<CustomField>
    <fullName>Available_Integration__c</fullName>
    <label>Available Integration</label>
    <referenceTo>Available_Integration__c</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>