unpackaged/main/default/objects/Integrations__c/fields/Disabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Date__c</fullName>
    <label>Disabled Date</label>
    <type>DateTime</type>
</CustomField>