unpackaged/main/default/objects/Integrations__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <description>Name of the integration.</description>
    <label>Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>answering_legal</fullName>
                <label>Answering Legal</label>
            </value>
            <value>
                <fullName>Callrail</fullName>
            </value>
            <value>
                <fullName>case_status</fullName>
                <label>Case Status</label>
            </value>
            <value>
                <fullName>ClientCredit</fullName>
            </value>
            <value>
                <fullName>Courtdrive</fullName>
            </value>
            <value>
                <fullName>DecisionVault</fullName>
            </value>
            <value>
                <fullName>Docketwise</fullName>
            </value>
            <value>
                <fullName>Esquiretek</fullName>
            </value>
            <value>
                <fullName>hona</fullName>
                <label>Hona</label>
            </value>
            <value>
                <fullName>InfoTrack</fullName>
            </value>
            <value>
                <fullName>Intaker</fullName>
            </value>
            <value>
                <fullName>Kenect</fullName>
            </value>
            <value>
                <fullName>Lawbrokr</fullName>
            </value>
            <value>
                <fullName>Lawmatics</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
            <value>
                <fullName>LawToolBox</fullName>
            </value>
            <value>
                <fullName>Legalboards</fullName>
            </value>
            <value>
                <fullName>lex_reception</fullName>
                <label>Lex Reception</label>
            </value>
            <value>
                <fullName>Proof</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>ruby_receptionists</fullName>
                <label>Ruby Receptionists</label>
            </value>
            <value>
                <fullName>Scorpion</fullName>
            </value>
            <value>
                <fullName>smith_ai</fullName>
                <label>Smith AI</label>
            </value>
            <value>
                <fullName>Time Miner</fullName>
            </value>
            <value>
                <fullName>truve</fullName>
                <label>Truve</label>
            </value>
            <value>
                <fullName>Vxt</fullName>
            </value>
            <value>
                <fullName>zapier</fullName>
                <label>Zapier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>