unpackaged/main/default/objects/Integrations__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Id for firm&#39;s integration (Firm UUID + Integration Name)</description>
    <externalId>true</externalId>
    <label>Integration Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>