unpackaged/main/default/objects/Integrations__c/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <formula>Available_Integration__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the integration name from the related Available Integration</inlineHelpText>
    <label>Integration Name</label>
    <type>Text</type>
</CustomField>