unpackaged/main/default/objects/Integrations__c/fields/MyCase_Contact_UUID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Contact_UUID__c</fullName>
    <label>MyCase Contact UUID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>