unpackaged/main/default/objects/Integrations__c/fields/Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>Product_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Environment</label>
    <referenceTo>Product_Environment__c</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>