unpackaged/main/default/objects/Integrations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Product_Environment__c</columns>
    <columns>Brand__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>