unpackaged/main/default/objects/Integrations__c/listViews/All_MyCase_Brand_Integrations.listView-meta.xml
<ListView>
    <fullName>All_MyCase_Brand_Integrations</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Integration_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Enabled_Date__c</columns>
    <columns>Disabled_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>MyCase</value>
    </filters>
    <label>All MyCase Brand Integrations</label>
</ListView>